Modify templates Add file upload functionality Add login/registration

--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -5,3 +5,11 @@ Title: Title
 Body: Body
 Category: Category
 Submit: Submit
+Add: Add
+Log In: Log In
+Remember me: Remember me
+Do not have account: Don't have account
+Registration: Registration
+Email: Email
+Password: Password
+Repeat Password: Repeat Password
