--- a/translations/messages.ru.yaml
+++ b/translations/messages.ru.yaml
@@ -5,3 +5,11 @@ Title: Заглание
 Body: Текст объявления
 Category: Категория
 Submit: Отправить
+Add: Добавить
+Log In: Войти
+Remember me: Запомнить
+Do not have account: Нет акаунта
+Registration: Регистрация
+Email: Эл. почта
+Password: Пароль
+Repeat Password: Повторите пароль
